--- a/true_roots/assets/css/style.css
+++ b/true_roots/assets/css/style.css
@@ -178,17 +178,25 @@ footer {
 
 .pietanze {
     padding: 20px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #arti {
     background-color: rgba(255, 255, 0, 0.411);
 }
 
-.tab-content {
-    padding: 40px;
+#ordina {
+    text-align: center;
 }
 
-.prenota {
+/* modulo ordine multiprodotto nella pagina menu */
+
+
+
+#prenota {
     background-color: rgba(178, 34, 34, 0.205);
     text-align: center;
     padding: 20px;
