aggiornato il progetto
La sezione menu è ora completa e funzionante con una navigazione che permette di visitare le varie sezioni del listino/menu.
Il modulo per l'ordinazione tavoli è completo
La navbar è stata corretta su tutte le pagine e funziona.

Da fare:
- modulo ordine pietanze modificando il listino con un selettore di quantità e un pulsante aggiungi al carrello  per ogni scheda con un js che scrive i dati su una pagina carrello.html da creare e un pulsante di invio  sulla pagina carrello che finalizza l'invio dell'ordine alla mail - su questa pagina potrebbe poi essere integrato un metodo di pagamento.
- php x invio dei form presenti nel template

--- a/true_roots/assets/css/style.css
+++ b/true_roots/assets/css/style.css
@@ -81,6 +81,15 @@ a {
     color: black;
 }
 
+.nav-pills .nav-item .nav-link.active {
+    background-color: firebrick;
+    color: white;
+}
+
+.nav-pills .nav-item .nav-link {
+    color: black;
+}
+
 footer {
     background-color: firebrick;
     padding: 20px;
@@ -119,7 +128,8 @@ footer {
     color: yellow;
 }
 
-.display-4, .lead {
+.display-4,
+.lead {
     color: white;
 }
 
