--- a/true_roots/assets/css/style.css
+++ b/true_roots/assets/css/style.css
@@ -72,7 +72,7 @@ a {
 .btn-primary {
     background-color: firebrick;
     border: 2px solid firebrick;
-    margin: 20px;
+    margin: 5px;
 }
 
 .btn-primary:hover {
@@ -194,17 +194,10 @@ footer {
     justify-content: center;
 }
 
-#arti {
-    background-color: rgba(255, 255, 0, 0.411);
+.istruzioni {
+    color: firebrick;
+    font-weight: 700;
 }
-
-#ordina {
-    text-align: center;
-}
-
-/* modulo ordine multiprodotto nella pagina menu */
-
-
 
 #prenota {
     background-color: rgba(178, 34, 34, 0.205);
