--- a/true_roots/assets/css/style.css
+++ b/true_roots/assets/css/style.css
@@ -8,6 +8,25 @@ Oswald used for Titles - 400/500/600/700 font-weight
 Roboto Mono used for Paragraphs - 400/700 font-weight
 */
 
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  color: firebrick; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 50px; /* Rounded corners */
+  font-size: 32px; /* Increase font size */
+}
+
+#myBtn:hover {
+  color:black; /* Add a dark-grey background on hover */
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -88,6 +107,7 @@ a {
 
 .nav-pills .nav-item .nav-link {
     color: black;
+    border: 2px solid firebrick;
 }
 
 footer {
@@ -131,10 +151,6 @@ footer {
 .display-4,
 .lead {
     color: white;
-}
-
-.card-deck {
-    padding-top: 10px;
 }
 
 /* Homepage */
@@ -194,21 +210,12 @@ footer {
     justify-content: center;
 }
 
-.istruzioni {
-    color: firebrick;
-    font-weight: 700;
-}
-
 #prenota {
     background-color: rgba(178, 34, 34, 0.205);
     text-align: center;
     padding: 20px;
 }
 
-i {
-    cursor: pointer;
-  }
-  
   /**
   * ! Navbar STyles are here
   **/
@@ -217,71 +224,84 @@ i {
     position: relative;
     background-color: #fff;
     color: #212529;
-    font-size: 16px;
-    padding: 5px;
-    border-radius: 4px;
+    font-size: 32px;
+    padding: 5px 20px 5px 5px;
+    margin: 0 10px 0 10px;
+    border-radius: 30%;
   }
   
   .cartAmount {
     position: absolute;
-    top: -15px;
+    top: -5px;
     right: -10px;
-    font-size: 16px;
-    background-color: firebrick;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: black;
     color: white;
-    padding: 3px;
-    border-radius: 3px;
+    padding: 5px;
+    border-radius: 6px;
   }
   
   /**
   * ! Shop items styles are here
   **/
-  
+
+.listino {
+  margin: 50px;
+  text-align: center;
+}
+
+.shop {
+  display: grid;
+  grid-template-columns: repeat(4, 223px);
+  gap: 30px;
+  justify-content: center;
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+
+@media (max-width: 1000px) {
   .shop {
-    display: grid;
-    grid-template-columns: repeat(4, 223px);
-    gap: 30px;
-    justify-content: center;
+    grid-template-columns: repeat(2, 223px);
   }
-  
-  @media (max-width: 1000px) {
-    .shop {
-      grid-template-columns: repeat(2, 223px);
-    }
+}
+
+@media (max-width: 500px) {
+  .shop {
+    grid-template-columns: repeat(1, 223px);
   }
-  
-  @media (max-width: 500px) {
-    .shop {
-      grid-template-columns: repeat(1, 223px);
-    }
-  }
-  
-  .item {
-    border: 2px solid #212529;
-    border-radius: 4px;
-  }
-  
-  .details {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    gap: 10px;
-  }
-  
-  .price-quantity {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .buttons {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-    font-size: 16px;
-  }
-  
+}
+
+.item {
+  border: 2px solid firebrick;
+  border-radius: 4px;
+}
+.item img {
+  width: 100%;
+  border-radius: 2px 2px 0 0;
+}
+
+.details {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap: 10px;
+}
+
+.price-quantity {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  font-size: 16px;
+}
+
   .fa-square-minus {
     color: firebrick;
     font-size: 24px;
@@ -304,20 +324,20 @@ i {
   .HomeBtn,
   .checkout,
   .removeAll {
-    background-color: #212529;
+    background-color: firebrick;
     color: white;
     border: none;
-    padding: 6px;
-    border-radius: 3px;
-    cursor: pointer;
+    padding: 10px;
     margin-top: 10px;
   }
   
   .checkout {
-    background-color: green;
+    background-color: firebrick;
+    color: white;
   }
   .removeAll {
-    background-color: red;
+    background-color: firebrick;
+    color: white;
   }
   
   /**
